--- a/css/index.css
+++ b/css/index.css
@@ -132,3 +132,7 @@ button[disabled=disabled], button:disabled {
 .campo-invalido{
 background-color: lightcoral;
 }
+
+#mensagem-erro{
+	color: red;
+}
