--- a/css/index.css
+++ b/css/index.css
@@ -133,6 +133,6 @@ button[disabled=disabled], button:disabled {
 background-color: lightcoral;
 }
 
-#mensagem-erro{
+#mensagens-erro{
 	color: red;
 }
